Not aligned correctly but color matches

--- a/idb/src/components/nav/navbar.css
+++ b/idb/src/components/nav/navbar.css
@@ -32,6 +32,11 @@ body {
 .bg-faded {
     background-color: #338481;
 }
+
+.pagination li .page-link {
+    color: #338481;
+}
+
 Link.nav-link {
     color: whitesmoke;
 }
